--- a/todo
+++ b/todo
@@ -1,65 +1,24 @@
-=================================================
-| Migrations + Models + Relations:
-=================================================
-rooms
-    id, name, struct, space_img, block_img, width, height, created_by
-        xxxx
-    xxx xxx
-    xxx xx   
-    xxx    xxxx
-    xxxxxxxxxxx
-    
-locations
-    id
-    room_id
-    pos_x
-    pos_y
-
-users_locations
-    id
-    user_id
-    location_id
-   
-warps
-    id
-    room1_id
-    room2_id
-
-warps_locations
-    id
-    warp_id
-    location_id
-
-|============================
-| Service: Texture Generator
-|============================
-- Build Image 50x50
-- Extract random frag from pool of images
-- Use GD to darken and derive "space" from "block"
-- return "space" + "block"
-
-===========================
-| Texture Maker
-===========================
-
-- Expect input_glob constructor arg
-- Create config 'textures.php' with input_glob => '...'
-- Create a bind on service provider passing config('textures.input_glob')
-
-============================
-| Room Factory:
-============================
-
-- Create Random Room
-- Room Method spawnWarpTo(Room2)
-- Room Method getAvailablePositions()
-- Select a Random Room (if exists) (prefer rooms without warps) and Link Through Location / Warp
-- Create method Room->findAvailablePositions() [x,y] [x,y] etc...
+- Finish up the create room screen (show small preview, allow recreate)
+- Create Heart + User + Gem components
+- Persist Room
 
 ===============================
 | /rooms (auth)
 ================================
-- Name | Thumbnail | [Teleport] (todo: teleport will cost money/points later)
+- Name | Thumbnail | [Teleport] 
+- SpotFactory -> random room id, available pos (x, y)
+
+spot
+    id
+    room_id
+    pos_x
+    pos_y
+    
+
+users_spots
+    id
+    user_id
+    spot_id
 
 ===========================
 | /rooms/{room} (auth)
@@ -74,4 +33,33 @@ warps_locations
 ===========================
 - Grab x, y -> realocate user
 - redirect to /rooms/{id}
+
+
+=================================================
+| Warps
+=================================================
+- Create a WarpFactory -> random room1_id + random room2_id + random spot (room1) + random spot(room2) + warps_spots
+       
+warps
+    id
+    room1_id
+    room2_id
+
+warps_spots
+    id
+    warp_id
+    spot_id
+
+===================================================
+| Items
+====================================================
+items
+    id
+    type heart|gold
+    data 50
+
+items_spots
+    id
+    item_id
+    spot_id
 
